problemViewer fixes on small display

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -257,6 +257,7 @@ panel .main .showEmpty:empty::after {
 #problemp {
     flex-grow: 1;
     width: auto;
+    height: 100%;
 }
 
 #uploadp {
@@ -275,6 +276,14 @@ panel .main .showEmpty:empty::after {
     body #container .flexRow {
         flex-wrap: wrap;
         height: auto;
+    }
+
+    body #container .flexRow:first-child {
+        min-height: 100%;
+    }
+
+    body #container .flexRow:first-child > .flexColumn.large {
+        min-height: calc(100vh - 90px);
     }
 
     body #container .flexColumn {
